--- a/insertionsort.ipynb
+++ b/insertionsort.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9+vqD3MLvMy4Ik58oNEKq",
+      "authorship_tag": "ABX9TyMa0VceaGTdAqgL48b6E54/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "cell_type": "markdown",
       "source": [
         "# 2. InsertionSort\n",
-        "## 2.1 codigo\n",
+        "## 2.1 Codigo\n",
         "**el siguiente codigo muestra el *Insertion-sort* echo en pyton:**\n",
         "\n"
       ],
@@ -59,35 +59,60 @@
     {
       "cell_type": "code",
       "source": [
-        "def InsertionSort(lista):\n",
+        "import random\n",
+        "from termcolor import colored\n",
+        "import copy\n",
+        "\n",
+        "def InsertionSort(lista, verbose=False):\n",
         "\n",
         "  n = len(lista) # largo del arreglo\n",
         "  c = 0 # contador de movimientos\n",
+        "  temp = c\n",
         "  for i in range(1,n):\n",
         "\n",
         "    aux = lista[i] # guarda el i-esimo elemento de la funcion \n",
         "    j = i-1 # j sera antesesor de i\n",
         "\n",
+        "    temp = c \n",
+        "    \n",
+        "    if(verbose):\n",
+        "        print(\"Pasada \",i,\":\")\n",
+        "        print(end=\"   \")\n",
+        "        print(str(lista[:i])[1:-1],end=\", \")\n",
+        "        print(colored(f\"{str(lista[i])}\",\"blue\")+\", \"+str(lista[i+1:])[1:-1])\n",
+        "\n",
         "    while j >= 0 and lista[j] > aux :\n",
         "      #si el j-esimo elemento es mayor que aux (osea el sucesor de j) se realisa un cambio\n",
         "      lista[j+1] = lista[j]\n",
         "      j = j-1\n",
-        "\n",
         "      c+=1 #se cuenta cuantas veces se movio un elemento\n",
+        "      lista[j+1] = aux \n",
         "\n",
-        "    lista[j+1] = aux \n",
+        "    if(verbose):\n",
+        "        if(temp!=c):\n",
+        "          print(end=\"   \")\n",
+        "          if(j+1>0):\n",
+        "            print(str(lista[:j+1])[1:-1],end=\", \")\n",
+        "      \n",
+        "          print(colored(f\"{str(lista[j+1])}\",\"green\")+\", \"+colored(f\"{str(lista[j+2:i+1])[1:-1]}\",\"red\")+\", \"+str(lista[i+1:])[1:-1])\n",
+        "          print(\"   Nº de intercambios :\",i-(j+1))\n",
+        "        else:\n",
+        "          print(\"   No hay intercambios\")\n",
+        "        print(\"\")\n",
         "\n",
+        "  if(verbose):\n",
+        "    print(\"El arreglo a sido ordenado\")\n",
         "  return lista , c\n",
         "\n",
-        "mylist = [1,5,7,2,3]\n",
+        "mylist = [5,2,3,4,6,1]\n",
         "\n",
         "print(\"Lista de entrada :\", mylist)\n",
         "\n",
         "mylist , cont = InsertionSort(mylist)\n",
         "\n",
-        "print(\"Lista de salida :\", mylist)\n",
+        "print(\"Lista de salida :\", mylist,\"\\n\")\n",
         "\n",
-        "print(\"Cuantas veces se movio un valor : \" , cont)\n",
+        "print(\"Cuantas veces se intercambio un valor : \" , cont)\n",
         "\n"
       ],
       "metadata": {
@@ -95,17 +120,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_tO_L_Psavk5",
-        "outputId": "f5db4506-fb74-4f16-f6af-d64fc9634e75"
+        "outputId": "79788aec-4242-4fed-e98f-8c204d51e839"
       },
-      "execution_count": 10,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Lista de entrada : [1, 5, 7, 2, 3]\n",
-            "Lista de salida : [1, 2, 3, 5, 7]\n",
-            "Cuantas veces se movio un valor :  4\n"
+            "Lista de entrada : [5, 2, 3, 4, 6, 1]\n",
+            "Lista de salida : [1, 2, 3, 4, 5, 6] \n",
+            "\n",
+            "Cuantas veces se intercambio un valor :  8\n"
           ]
         }
       ]
@@ -113,20 +139,139 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.2 descripcion del algoritomo\n",
-        "El algoritmo resibe una lista o un arreglo \"$a$\" con la cantidad de $n$-numeros de los cuales el algoritmo tiene que ordenar de menor a mayor usando dentro del mismo arreglo o lista\n",
+        "## 2.2 Descripcion del algoritomo\n",
+        "El algoritmo resibe una lista o un arreglo \"$a$\" con la cantidad de $n$-numeros de los cuales el algoritmo tiene que ordenar de menor a mayor usando dentro del mismo arreglo o lista \n",
         "\n",
-        "1.   Dentro de este cada iteracion de $i$ se verifica que `j>=0` y `lista[j]>aux` donde `aux` vendria siendo el $i$-esimo elemento.Si lo anterior se cumple entonces se comiensa un ciclo donde `lista[j+1]` se le asigna el valor de `lista[j]` y Luego `j` se decrementa. \n",
+        "1.   el algoritmo empisa con un ciclo `for` con i desde 1 hasta el largo del arreglo, se declara a `j=i-1` (esta es la razon porque `i` no empiesa en 0) y por ultimo se asigna `aux=lista[i]` para que guarde. por ultimo se inicia un ciclo `while` con las condisionales  de `j>=0 ` y `lista[j]>aux`\n",
         "\n",
-        "2.  el cilco termina cuando `lista[j]<aux` o `j<0`. Si esto no ocurre continuara hasta que lo anterior se cumpla.\n",
+        "2. dentro de este ciclo `while` se intercambia el valor de `lista[j]` con la de `lista[j+1]`\n",
         "\n",
-        "3. al final del algoritmo se retorna la lista ordenada y `c` que es la cantidad de veces que el ciclo cambio un elemento\n",
+        "3.  el cilco `while` termina cuando `lista[j]<=aux` o `j<0`. Si esto no ocurre continuara hasta que lo anterior se cumpla.\n",
+        "\n",
+        "4. al final del algoritmo se retorna la lista ordenada y `c` que es la cantidad de veces que el ciclo cambio un elemento\n",
+        "\n",
+        "el algoritmo es muy facil de implemetar y se parece mas a la manera natural que tiene el ser humano para ordenar numero, pero tambien es una de las mas ineficientes\n",
         "\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "R1xUjFmyqhma"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.3 Ejemplo \n",
+        "Para el ejemplo usaremos el siguiente arreglo:\n",
+        "\n",
+        "$a=[3,2,4,1]$\n",
+        "\n",
+        "el la primera pasada el cambio que se produce es el de el 3 con 2\n",
+        "\n",
+        "$a=[2,3,4,1]$\n",
+        "\n",
+        "en la siguiente se compara el 3 con el 4, como 3 < 4 no se intercambia ningun numero\n",
+        "\n",
+        "$a=[2,3,4,1]$\n",
+        "\n",
+        "en la tercera pasada el 1 se intercambia con el 4\n",
+        "\n",
+        "$a=[2,3,1,4]$\n",
+        "\n",
+        "en la cuarta se intercambia el 1 con el 3\n",
+        "\n",
+        "$a=[2,1,3,4]$ \n",
+        "\n",
+        "y por ultimo se cambia el 2 por el 1\n",
+        "\n",
+        "$a=[1,2,3,4]$"
+      ],
+      "metadata": {
+        "id": "6NvcUTganNsl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2.4 Algoritmo paso a paso\n",
+        "Usando la opción `verbose=True`, podemos ver lo que ocurre en cada iteración del algoritmo"
+      ],
+      "metadata": {
+        "id": "kKPQiy7Fsi8X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "a = random.sample(range(1, 100), 6)\n",
+        "\n",
+        "InsertionSort(a,True)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zzEQEgkPs4nO",
+        "outputId": "19f228b6-6bc8-416c-f2a7-64ec60fb2d34",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pasada  1 :\n",
+            "   70, \u001b[34m78\u001b[0m, 55, 56, 16, 12\n",
+            "   No hay intercambios\n",
+            "\n",
+            "Pasada  2 :\n",
+            "   70, 78, \u001b[34m55\u001b[0m, 56, 16, 12\n",
+            "   \u001b[32m55\u001b[0m, \u001b[31m70, 78\u001b[0m, 56, 16, 12\n",
+            "   Nº de intercambios : 2\n",
+            "\n",
+            "Pasada  3 :\n",
+            "   55, 70, 78, \u001b[34m56\u001b[0m, 16, 12\n",
+            "   55, \u001b[32m56\u001b[0m, \u001b[31m70, 78\u001b[0m, 16, 12\n",
+            "   Nº de intercambios : 2\n",
+            "\n",
+            "Pasada  4 :\n",
+            "   55, 56, 70, 78, \u001b[34m16\u001b[0m, 12\n",
+            "   \u001b[32m16\u001b[0m, \u001b[31m55, 56, 70, 78\u001b[0m, 12\n",
+            "   Nº de intercambios : 4\n",
+            "\n",
+            "Pasada  5 :\n",
+            "   16, 55, 56, 70, 78, \u001b[34m12\u001b[0m, \n",
+            "   \u001b[32m12\u001b[0m, \u001b[31m16, 55, 56, 70, 78\u001b[0m, \n",
+            "   Nº de intercambios : 5\n",
+            "\n",
+            "El arreglo a sido ordenado\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "([12, 16, 55, 56, 70, 78], 13)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "los numeros azul representa el $i$-esimo elemento que se esta comparando \n",
+        "en cada intercambio es representado con rojo y la posision final de cada elemento esta coloreada con verde "
+      ],
+      "metadata": {
+        "id": "uxaZ5rh2t1Lu"
       }
     }
   ]
