parte de la seccion 3

--- a/insertionsort.ipynb
+++ b/insertionsort.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMa0VceaGTdAqgL48b6E54/",
+      "authorship_tag": "ABX9TyNAqPILHUnWLVePeX3jHUqD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,11 +213,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "zzEQEgkPs4nO",
-        "outputId": "19f228b6-6bc8-416c-f2a7-64ec60fb2d34",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zzEQEgkPs4nO",
+        "outputId": "19f228b6-6bc8-416c-f2a7-64ec60fb2d34"
       },
       "execution_count": 158,
       "outputs": [
@@ -273,6 +273,86 @@
       "metadata": {
         "id": "uxaZ5rh2t1Lu"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3.Tiempos de ejecucion \n",
+        "\n",
+        "insertion-sort en el mejor caso tendra un tiempo de $O(n)$ \n",
+        "\n",
+        "y el peor caso es de $O(n^2)$\n",
+        "\n",
+        "el peor caso ocurre cuando los elementos estan ordenados de mayor a menor, lo que provocaria que el $i$-esimo elemento debe ser intercambiado hasta la primera posision del arreglo"
+      ],
+      "metadata": {
+        "id": "3jjhd8HswPkn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##3.1 Ejemplo\n"
+      ],
+      "metadata": {
+        "id": "OtsAFVs5zIDS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista=[6,5,4,3,2,1]\n",
+        "\n",
+        "print(\"entrada :\", lista)\n",
+        "lista , contador = InsertionSort(lista,True)\n",
+        "print(\"salida :\",lista)\n",
+        "print(\"cantidad de intercambios :\", contador)"
+      ],
+      "metadata": {
+        "id": "5pMiH7uFzjfu",
+        "outputId": "cf26287c-a157-49bf-c91f-036ef2f6cdd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "entrada : [6, 5, 4, 3, 2, 1]\n",
+            "Pasada  1 :\n",
+            "   6, \u001b[34m5\u001b[0m, 4, 3, 2, 1\n",
+            "   \u001b[32m5\u001b[0m, \u001b[31m6\u001b[0m, 4, 3, 2, 1\n",
+            "   Nº de intercambios : 1\n",
+            "\n",
+            "Pasada  2 :\n",
+            "   5, 6, \u001b[34m4\u001b[0m, 3, 2, 1\n",
+            "   \u001b[32m4\u001b[0m, \u001b[31m5, 6\u001b[0m, 3, 2, 1\n",
+            "   Nº de intercambios : 2\n",
+            "\n",
+            "Pasada  3 :\n",
+            "   4, 5, 6, \u001b[34m3\u001b[0m, 2, 1\n",
+            "   \u001b[32m3\u001b[0m, \u001b[31m4, 5, 6\u001b[0m, 2, 1\n",
+            "   Nº de intercambios : 3\n",
+            "\n",
+            "Pasada  4 :\n",
+            "   3, 4, 5, 6, \u001b[34m2\u001b[0m, 1\n",
+            "   \u001b[32m2\u001b[0m, \u001b[31m3, 4, 5, 6\u001b[0m, 1\n",
+            "   Nº de intercambios : 4\n",
+            "\n",
+            "Pasada  5 :\n",
+            "   2, 3, 4, 5, 6, \u001b[34m1\u001b[0m, \n",
+            "   \u001b[32m1\u001b[0m, \u001b[31m2, 3, 4, 5, 6\u001b[0m, \n",
+            "   Nº de intercambios : 5\n",
+            "\n",
+            "El arreglo a sido ordenado\n",
+            "salida : [1, 2, 3, 4, 5, 6]\n",
+            "cantidad de intercambios : 15\n"
+          ]
+        }
+      ]
     }
   ]
 }
