Creado mediante Colaboratory

--- a/Informe-SubArregloMaximo.ipynb
+++ b/Informe-SubArregloMaximo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Copia de Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHVpO+L++99Ii9+KUhHYCd",
+      "authorship_tag": "ABX9TyNairFRKT6VUYaT6TtDMV8o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,26 +80,26 @@
         "\n",
         "def MaxSubArrayMid(arr,low,med,high,verbose=False,espaciado=\"\"):\n",
         "\n",
-        "  global GIGA,inf,sup\n",
+        "  global GIGA,inf,sup #variables globales para sacar los indice\n",
         "\n",
-        "  imedi=low\n",
-        "  smedd=high\n",
+        "  imedi=low #indice inferior de la mitad derecha\n",
+        "  smedd=high #indice superior de la mitad izquierda\n",
         "\n",
         "  suma=0\n",
         "  izq_max=-10000\n",
         "  \n",
         "\n",
-        "  if(verbose):\n",
+        "  if(verbose):#verbose para explicar que es lo que pasa\n",
         "    print(\"-----------------------------------------------------\")\n",
         "    print(espaciado+\"(Funcion MaxSubArrayMid)\\n\")\n",
-        "    espaciado=\"   \"+espaciado[:-2]\n",
+        "    espaciado=\"   \"+espaciado[:-2] #  ayuda a la estetica para que se explique mejor\n",
         "    print(espaciado+\"Sub-array =\",arr[low:high+1])\n",
         "\n",
         "  for i in range(med, low-1, -1):\n",
         "        suma = suma + arr[i]\n",
         " \n",
         "        if (suma > izq_max):\n",
-        "            imedi=i\n",
+        "            imedi=i #se asigna el indice\n",
         "            izq_max = suma\n",
         "\n",
         "  if(verbose):\n",
@@ -114,10 +114,10 @@
         "        suma = suma + arr[i]\n",
         "        \n",
         "        if (suma > der_max):\n",
-        "            smedd = i\n",
+        "            smedd = i #se asigna el indice\n",
         "            der_max = suma  \n",
         "\n",
-        "  if(verbose):\n",
+        "  if(verbose):# se muestra la matris si vervobose es verdadero\n",
         "    print(\"\\n\"+espaciado+\"MITAD DERECHA:\")\n",
         "    print(\"   \"+espaciado+\"[\"+str(arr[:med+1])[1:-1]+\", \"+colored(f\"{str(arr[med+1:smedd+1])[1:-1]}\",\"blue\")+\", \"+str(arr[smedd+1:])[1:-1]+\"]\")\n",
         "    print(\"   \"+espaciado+\"Maximo derecho =\", der_max,\"\\n\")\n",
@@ -139,20 +139,20 @@
         "    print(\"   \"+espaciado+\"Maximo =\",der_max+izq_max)\n",
         "    print(\"-----------------------------------------------------\")\n",
         "\n",
-        "  if(GIGA < der_max+izq_max):\n",
+        "  if(GIGA < der_max+izq_max): #GIGA ayuda a comparar todos los sub arreglos\n",
         "    GIGA = der_max+izq_max\n",
         "    inf=imedi\n",
         "    sup=smedd\n",
         "\n",
-        "  return der_max+izq_max\n",
+        "  return der_max+izq_max #se devuelve la suma de los maximos de las 2 mitades\n",
         "\n",
         "\n",
         "def MaxSubArray(arr,low,high,verbose=False,espaciado=\"\"):\n",
         "  \n",
-        "  global GIGA,inf,sup\n",
+        "  global GIGA,inf,sup #varibles globales que ayudan a sacar el idice\n",
         "  \n",
         "  \n",
-        "  linea=espaciado+\"└─\"\n",
+        "  linea=espaciado+\"└─\" #meramente de estetica\n",
         "\n",
         "  if(verbose and arr != [] ):\n",
         "    print(linea+\"Sub-arreglo:\",arr[low:high+1])\n",
@@ -162,7 +162,7 @@
         "    if(verbose):\n",
         "      print(espaciado+\"   Es de orden 1\\n\")\n",
         "\n",
-        "    if(GIGA < arr[low]):\n",
+        "    if(GIGA < arr[low]):#GIGA compara todas las sub matrises\n",
         "      GIGA = arr[low]\n",
         "      sup=low\n",
         "      inf=low\n",
@@ -184,7 +184,7 @@
         "    \n",
         "a = [1,2,3,4,5,6,7]\n",
         "n = len(a)\n",
-        "GIGA=-10000000\n",
+        "GIGA=-10000000 #antes de la llamada a GIGA se le asigna el menor numero posible si no se hace aun asi da el maximo pero no da el indice\n",
         "\n",
         "print(\"La Mayor suma es =\",MaxSubArray(a,0,n-1,False,\"\"))\n",
         "print(\"sub-arreglo =\"+\"[\"+str(a[:inf])[1:-1]+\", \"+colored(f\"{str(a[inf:sup+1])[1:-1]}\",\"green\")+\", \"+str(a[sup+1:])[1:-1]+\"]\")\n"
@@ -196,7 +196,7 @@
         },
         "outputId": "8af1ba6e-ad23-4155-d6cc-98ebfc72a189"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
         "id": "Trv0yCMk8P71",
         "outputId": "b1e5857c-6aca-4fc4-d121-bcad32c84054"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +512,7 @@
         "id": "rzbAJ1zxgg-X",
         "outputId": "a6ec1413-8327-4e34-bdbf-a5e7557fd755"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -607,7 +607,7 @@
         "id": "fn8AQYm8zSMi",
         "outputId": "f2b85397-e75d-4444-b62b-803ab5c95788"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
