Creado mediante Colaboratory

--- a/informe-BucketSort.ipynb
+++ b/informe-BucketSort.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAnjfiHh9t3Xnq5kVGTQ5P",
+      "authorship_tag": "ABX9TyN6aLzsS34t/3emJyQokT9u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,9 +171,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PZXbvaU4Wd8s",
-        "outputId": "f37c4b35-f164-40a3-b1ab-06e0a65c9d9a"
+        "outputId": "e27f3ffc-5ecc-4bfd-e67c-2ef6d46f7c77"
       },
-      "execution_count": null,
+      "execution_count": 331,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
         "id": "3eXm4TsB99yD",
         "outputId": "06551081-19c3-4976-c7a7-30a37ffe8319"
       },
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
         "id": "-KlSsuPn19jT",
         "outputId": "6b4f3c08-63b8-4af0-ad2e-85171ed03344"
       },
-      "execution_count": null,
+      "execution_count": 226,
       "outputs": [
         {
           "output_type": "display_data",
@@ -581,11 +581,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Como se puede apresiar en los **primeros 600 arreglos** RadixSort demostro ser mucho mas rapido que BucketSort pero a medida llegan a los 600 estos llegan a ser iguales hasta que pasan esta sifra.\n",
+        "Como se puede apresiar cuando $n < 600$ (valor aproximado) RadixSort demostro ser mucho mas rapido que BucketSort pero a medida $n$ 600 estos llegan a ser iguales hasta que pasan esta sifra.\n",
         "\n",
-        "Es asi como **bucketsort demuestra ser mas rapido en arreglos que superan los 600 elementos**.\n",
+        "Es asi como **bucketsort demuestra ser mas rapido en arreglos que cumplan que $n > 600$**.\n",
         "\n",
-        "en ambos casos tienen complejidad lineal lo cual lo vulve muy rapidos pero eso no quita el echo de que pueden ser muy costoso en tema de memoria siendo O(n) (la mas costosa comparada a quicksort que es O(log(n) y insertionsort de O(1))\n"
+        "en ambos casos tienen complejidad lineal lo cual lo vulve muy rapidos pero eso no quita el echo de que pueden ser muy costoso en tema de memoria siendo $O(n)$ (la mas costosa comparada a quicksort que es $O(log(n)$ y insertionsort de $O(1)$)\n"
       ],
       "metadata": {
         "id": "wB_B2boXOVVS"
@@ -613,7 +613,7 @@
         "bx=[]\n",
         "by=[]\n",
         "\n",
-        "x=[n for n in range(5,20)]\n",
+        "\n",
         "best=[n*0.00001 for n in range(5,20)]\n",
         "worst=[(n**2)*0.00001 for n in range(5,20)]\n",
         "for n in range(5,20):\n",
@@ -645,7 +645,7 @@
         "id": "glBb7kLP-YGn",
         "outputId": "b40480e5-05c7-4a58-983a-b817604d91b2"
       },
-      "execution_count": null,
+      "execution_count": 286,
       "outputs": [
         {
           "output_type": "display_data",
@@ -664,7 +664,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Como se pude ver en la grafica Bucket-sort el caso promedio tiende hacia el mejor caso $O(n)$, aunque siempre van a ver casos muy especificos que puden hacer que bucket sort tienda a $O(n^2)$ como se puede apresiar en lado n"
+        "Como se pude ver en la grafica Bucket-sort el caso promedio tiende hacia el mejor caso $O(n)$, aunque siempre van a ver casos muy especificos que puden hacer que bucket sort tienda a $O(n^2)$ como se puede cuando $n$ llega a 9 este se hacerca a $O(n^2)$ "
       ],
       "metadata": {
         "id": "KZHi8I_xV5ew"
